Personalizei a Tab1 com meus dados

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="dark">
     <ion-title>
-      Tab 1
+      VideosApp
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,12 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+       <ion-title size="large">VideosApp</ion-title>
     </ion-toolbar>
   </ion-header>
-
+  <img src="https://avatars.githubusercontent.com/u/86686218?v=4" alt="">
+     <h1>Ivan JC Correia</h1>
+     <p>Estudante do ISP-Caála.</p>
+    <a href ="mailto:ivanjacobcorreia@gmail.com">ivanjacobcorreia@gmail.com</a>
   
 </ion-content>
